Added bootstrap gem and styled views

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome#about</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
+<h1>About Blocipedia</h1>
+<p>Wikis are a great way to collaborate on community-sourced content. Whether the wiki is for a hobby or work-related project, this is an app that lets users create their own wikis and share them publicly or privately with other collaborators.</p>
