--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,21 @@
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
-      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Blocipedia", root_path %></li>
       <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Wikis", wikis_path %></li>
+      <li><%= link_to "My Wikis", wikis_path %></li>
 
         <div class="pull-right user-info">
           <% if current_user %>
-            Hello <%= current_user.email %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+            Hello
+            <%= (current_user.name || current_user.email) %>!
+            <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm' do %>
+              <span class="glyphicon glyphicon-user"></span>
+            <% end %>
+
+            <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm' do %>
+              <span class="glyphicon glyphicon-log-out"></span>
+            <% end %>
           <% else %>
             <%= link_to "Sign In", new_user_session_path %> or
             <%= link_to "Sign Up", new_user_registration_path %>
