--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,8 +1,24 @@
-<h1><%= @wiki.title %></h1>
-<p><%= @wiki.body %></p>
-<% if policy(@wiki).edit? %>
-  <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-<%end %>
-<% if policy(@wiki).destroy? %>
-  <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
-<% end %>
+<div class="row">
+  <div class="col-md-8">
+    <h4><%= @wiki.title %></h4>
+    <% if @wiki.is_private %>
+      (private)
+    <% end %>
+  </div>
+
+  <div class="col-md-8"
+    <%= @wiki.body %>
+  </div>
+
+  <div class="col-md-8">
+    <% if policy(@wiki).edit? %>
+      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+    <%end %>
+  </div>
+
+  <div class="col-md-8">
+    <% if policy(@wiki).destroy? %>
+      <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+    <% end %>
+  </div>
+</div>
