Created collaborators model and controller

--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -12,3 +12,7 @@
     </div>
   </div>
 <% end %>
+
+<% if policy(Wiki).edit? %>
+<%= link_to "Edit Wiki", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+<% end %>
