--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,23 +1,19 @@
 <div class="row">
   <div class="col-md-8">
-    <h4><%= @wiki.title %></h4>
+    <h2><%= @wiki.title %></h2>
     <% if @wiki.is_private %>
       (private)
     <% end %>
-  </div>
 
-  <div class="col-md-8"
-    <%= @wiki.body %>
+    <h4><%= @wiki.body %></h4>
   </div>
 
   <div class="col-md-8">
-    <% if policy(@wiki).edit? %>
+    <% if policy(@wiki) %>
       <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
     <%end %>
-  </div>
 
-  <div class="col-md-8">
-    <% if policy(@wiki).destroy? %>
+    <% if policy(@wiki) %>
       <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
     <% end %>
   </div>
