--- a/app/views/collaborators/index.html.erb
+++ b/app/views/collaborators/index.html.erb
@@ -1,19 +1,20 @@
-<h1>Add Collaborators to the <%= link_to @wiki.title, @wiki %></h1>
+<h4> <%= link_to @wiki.title, @wiki %></h4>
 
 <div class="row">
   <div class="col-md-8" align="center">
     <table class="table table-striped">
-      <tr>
-        <% @users.each do |user|  %>
 
+      <% @users.each do |user|  %>
+      <tr>
         <td><%= user.name %></td>
         <td> <%= user.email %></td>
-        <% if @wiki.is_collabortor?(user) %>
+        <% if @wiki.is_collaborator?(user) %>
+        <td> <%= link_to "Remove as collaborator", wiki_collaborator_path(@wiki, @wiki.collaborator_for(user)), method: :delete, class: "btn btn-danger" %></td>
         <% else %>
         <td> <%= link_to "Add as collaborator", wiki_collaborators_path(@wiki, user_id: user.id), method: :post, class: "btn btn-success" %></td>
         <% end %>
         <% end %>
-      </table>
-    </div>
+      </tr>
+    </table>
   </div>
-  
+</div>
