--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -8,6 +8,10 @@
     <% @wikis.each do |wiki| %>
     <tr>
       <td><%= link_to wiki.title, wiki %></td>
+      <% if policy(wiki).edit? %>
+        <td><%= link_to "edit", edit_wiki_path(wiki), class: 'btn btn-primary' %></td>
+        <td><%= link_to "delete", wiki, method: :delete, class: "btn btn-danger", data: {confirm: 'Are you sure you want to delete this Wiki'} %></td>
+      <% end %>
     </tr>
 <% end %>
 </table>
