--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,20 +1,7 @@
-<div class="row">
-  <div class="col-md-8">
-    <h2><%= @wiki.title %></h2>
-    <% if @wiki.is_private %>
-      (private)
-    <% end %>
+<h1><%= markdown @wiki.title %> </h1>
 
-    <h4><%= @wiki.body %></h4>
-  </div>
+<p><%= markdown @wiki.body %> </p>
 
-  <div class="col-md-8">
-    <% if policy(@wiki) %>
-      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-    <%end %>
-
-    <% if policy(@wiki) %>
-      <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
-    <% end %>
-  </div>
-</div>
+<% if policy(@wiki).edit? %>
+<%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+<% end %>
