Updated Stripe and index views

--- a/app/views/collaborators/index.html.erb
+++ b/app/views/collaborators/index.html.erb
@@ -4,15 +4,15 @@
   <div class="col-md-8" align="center">
     <table class="table table-striped">
 
-      <% @users.each do |user|  %>
+      <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
         <td> <%= user.email %></td>
-        <% if @wiki.is_collaborator?(user) %>
-        <td> <%= link_to "Remove as collaborator", wiki_collaborator_path(@wiki, @wiki.collaborator_for(user)), method: :delete, class: "btn btn-danger" %></td>
-        <% else %>
-        <td> <%= link_to "Add as collaborator", wiki_collaborators_path(@wiki, user_id: user.id), method: :post, class: "btn btn-success" %></td>
-        <% end %>
+          <% if @wiki.is_collaborator?(user) %>
+            <td> <%= link_to "Remove as collaborator", wiki_collaborator_path(@wiki, @wiki.collaborator_for(user)), method: :delete, class: "btn btn-danger" %></td>
+          <% elsif current.user.premium? %>
+            <td> <%= link_to "Add as collaborator", wiki_collaborators_path(@wiki, user_id: user.id), method: :post, class: "btn btn-success" %></td>
+          <% end %>
         <% end %>
       </tr>
     </table>
